package ubii.error;
syntax = "proto3";

message ErrorMessage {
    string message_type = 1;
    string error_message = 2;
}